# a2b-news-aggregator-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_log.txt
src/: main.rs
